--- a/uchat_backend/templates/chat.html
+++ b/uchat_backend/templates/chat.html
@@ -5,26 +5,37 @@
 </head>
 <body>
 	<h1>{{ room.label }}</h1>
-	<form id="chatform">
-		<table id="chat">
-			<tbody>
-			{% for message in messages %}
-				<tr>
-					<td>{{ message.formatted_timestamp }}</td>
-					<td>{{ message.handle }}</td>
-					<td>{{ message.message }}</td>
-				</tr> 
-			{% endfor %}
-			</tbody>
-			<tfoot>
-				<tr>
-					<td>Say something:</td>
-					<td colspan=2>
-						<input id="message" type="text" placeholder="message">
-						<button type="submit" id="go">Say it</button>
-					</td>
-			</tfoot>
-		</table>
-	</form>
+  <p class="quiet">
+    Anyone with this URL can join the room and chat: 
+    <code>{{ request.scheme }}://{{ request.get_host }}/{{ room.label }}</code> 
+  </p>
+  <p>
+    <label for="handle">Your name:</label>
+    <input id="handle" type="text" placeholder="handle">
+  </p>
+  <form id="chatform">
+    <table id="chat">
+      <tbody>
+        {% for message in messages %}
+          <tr>
+            <td>{{ message.formatted_timestamp }}</td>
+            <td>{{ message.handle }}</td>
+            <td>{{ message.message }}</td>
+          </tr> 
+        {% endfor %}
+      </tbody>
+      <tfoot>
+      <tr>
+        <td>Say something:</td>
+        <td colspan=2>
+          <input id="message" type="text" placeholder="message">
+          <button type="submit" id="go">Say it</button>
+        </td>
+      </tfoot>
+    </table>
+  </form>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="/static/reconnecting-websocket.min.js"></script>
+	<script type="text/javascript" src="/static/chat.js"></script>
 </body>
 </html>
