added friend request and friend chat facility

--- a/uchat_backend/templates/chat.html
+++ b/uchat_backend/templates/chat.html
@@ -11,7 +11,7 @@
   </p>
   <p>
     <label for="handle">Your name:</label>
-    <input id="handle" type="text" placeholder="handle">
+    <input id="handle" type="text" placeholder="handle" value="{{loggeduser.name}}">
   </p>
   <form id="chatform">
     <table id="chat">
