--- a/uchat_backend/static/css/chat/main.css
+++ b/uchat_backend/static/css/chat/main.css
@@ -15,6 +15,8 @@ html{
 	/*border-radius: 8px;*/
 	width: 100%;
 	height: 80vh;
+	/*overflow: auto;*/
+	overflow-y: scroll;
 	/*background-color: yellow;*/
 }
 
