--- a/uchat_backend/templates/chat.html
+++ b/uchat_backend/templates/chat.html
@@ -35,6 +35,7 @@
     </table>
   </form>
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
 	<script type="text/javascript" src="/static/reconnecting-websocket.min.js"></script>
 	<script type="text/javascript" src="/static/chat.js"></script>
 </body>
