--- a/uchat_backend/static/css/chat/message.css
+++ b/uchat_backend/static/css/chat/message.css
@@ -1,9 +1,9 @@
 .msg {
-  margin-bottom: 12px;
+  /*margin-bottom: 12px;*/
   position: relative;
 }
 
-.bubble {
+/*.bubble {
   padding: 6px 0 8px 0;
   padding-left: 9px;
   padding-right: 7px;
@@ -12,13 +12,13 @@
 .bubble-text {
   bottom: 3px;
   right: 7px;
-}
+}*/
 
 .has-author {
   margin-top: 6px;
 }
 
-.message-author {
+/*.message-author {
   font-family: 'Open Sans', sans-serif;
   font-size: 12.5px;
   line-height: 20px;
@@ -31,16 +31,16 @@
   white-space: nowrap;
   padding-left: 3px;
   margin-left: -3px;
-}
+}*/
 
 .title-number {
   display: -webkit-flex;
   display: flex;
+  flex-wrap: wrap;
+  text-align: left;
+ 
 }
 
-.ellipsify{
-	display: block;
-}
 
 .screen-name {
   font-weight: normal;
@@ -48,11 +48,37 @@
   margin-left: 8px;
 }
 
-.screen-name-text::before {
-  content: "~";
-}
 
 .message-out {
-	
-  float: right;
+  direction: rtl; 
+  color:white;
+}
+
+.selectable-text{
+  background-color: blue ;
+  display: block;
+  word-wrap: break-word;
+  text-shadow: none;
+  position: relative;
+  white-space: pre-wrap;
+  line-height: 1.28;
+  border-collapse: collapse;
+  /*font-size: 12px;*/
+  max-width: 250px;
+  border-radius: 1.3em;
+  padding: 6px 12px;
+  min-width:0px;
+   color: white;
+}
+
+.message-text{
+  /*flex-direction: column;*/
+  display: block;
+/*padding-top: 5px;
+  padding-right: 8px;
+  padding-bottom: 4px;
+  padding-left: 8px;*/
+  border:1px solid white;
+  overflow: hidden;
+  /*padding: 6px 12px;*/
 }
