--- a/uchat_backend/templates/chat/index.html
+++ b/uchat_backend/templates/chat/index.html
@@ -12,46 +12,47 @@
 
 <body>
 	<div class="container-fluid">
-		<div class="row">
+		<div class="row main-page">
 			<!-- Side Window -->
-			<div class="col-sm-2 sidebar" >
-				<!-- User Info -->
-				<div class="row">
-					<div class="sidebar-section user-info">
-						<div class="sidebar-header">
-							<div class="col-lg-4">
-								<div class="sidebar-user-icon">
-									<img  class="initial-image img-rounded" data-name="Vidit" height="50" width="50"/>
-								</div>
-							</div>
-							<div class="col-sm-8">
-								<div class="row">
-									<div class="col-lg-12">
-										<div id="user-info-name" class="sidebar-item-title">{{loggeduser.name|title}}</div>	
+			<div class="col-xs-2 sidebar" >
+				<div class="sidebar-1">
+					<!-- User Info -->
+					<div class="row">
+						<div class="sidebar-section user-info">
+							<div class="sidebar-header">
+								<div class="col-lg-4">
+									<div class="sidebar-user-icon">
+										<img  class="initial-image img-rounded" data-name="Vidit" height="50" width="50"/>
 									</div>
 								</div>
-								<span id="user-info-username">{{loggeduser.username}}</span> | 
-								<span>active</span>
-							</div>	
-						</div>
-						<hr>
-					</div>	
-				</div>
-				
-				<div class="row">
-					<!-- Friends and Group search -->
-					<div class="col-sm-12">
-						<div class="friends-group-search sidebar-item input-group">
-							<input class="typeahead form-control" type="text" id="typeahead" placeholder=" Search uChat" >
-							<!-- <span class="input-group-btn">
-                        		<button class="btn btn-info btn-sm" type="button" >
-                            		<i class="glyphicon glyphicon-search"></i>
-                        		</button>
-                        	</span> -->
-						</div>
+								<div class="col-sm-8">
+									<div class="row">
+										<div class="col-lg-12">
+											<div id="user-info-name" class="sidebar-item-title">{{loggeduser.name|title}}</div>	
+										</div>
+									</div>
+									<span id="user-info-username">{{loggeduser.username}}</span> | 
+									<span>active</span>
+								</div>	
+							</div>
+							<hr>
+						</div>	
 					</div>
+				
+					<div class="row">
+						<!-- Friends and Group search -->
+						<div class="col-sm-12">
+							<div class="friends-group-search sidebar-item input-group">
+								<input class="typeahead form-control" type="text" id="typeahead" placeholder=" Search uChat" >
+								<!-- <span class="input-group-btn">
+	                        		<button class="btn btn-info btn-sm" type="button" >
+	                            		<i class="glyphicon glyphicon-search"></i>
+	                        		</button>
+	                        	</span> -->
+							</div>
+						</div>
 
-				</div>
+					</div>
 
 
 				<!-- sIDEBAR fRIENDS -->
@@ -69,7 +70,7 @@
 								<img class="initial-image img-rounded" data-name="{{friend.friend.name}}" width="20px" height="20spx">
 							</div>
 							<div class="sidebar-item-title">{{friend.friend.name|title}}</div>
-							<div class="hidden socket-chat">{{friend.label}}</div>
+							<div class="hidden socket-chat" creator="{{friend.creator.username}}" friend="{{friend.friend.username}}" friend-name="{{friend.friend.name}}" chat-id="{{friend.room.label}}">{{friend.label}}</div>
 						</div>
 						{% endfor %}
 						<!-- <div class="sidebar-item friends-item">
@@ -165,24 +166,25 @@
 							<label id="loadMoreGroups">Load More...</label>
 						</div>						
 				</div>
-					
+				</div>
 			</div>
 
 
 			<!-- Chat Window -->
-			<div class="col-sm-6">
-				<div class="row">
-					<div class="col-sm-12">
-						<h1 class="text-right"> Dua Lipa </h1>		
+			<div class="col-xs-6">
+				<div class="middle-section">
+					<div class="row">
+						<div class="col-sm-12">
+							<h1 class="text-right " id="friend-name-heading">  </h1>		
+						</div>
 					</div>
-				</div>
 				
 				<div class="row">
 					<div class="container-fluid chatarea" id="chat">
 
 						{% for m in messages %}
 						<div class="msg">
-							<div class="bubble bubble-text has-author">
+							<div class="bubble bubble-text has-author title-number">
 								
 								<div class="message-text {% if m.handle == loggeduser.username %}message-out{% endif %}">
 									<span class="emojitext selectable-text">
@@ -193,40 +195,34 @@
 							</div>
 						</div>
 						{% endfor %}
-						<!-- <div class="msg ">
-							<div class="bubble bubble-text has-author">
-								
-								<div class="message-text message-out">
-									<span class="emojitext selectable-text">
-										Thanks
-									</span>
-									
-								</div>
-							</div>
-						</div> -->
 					</div>
 				</div>
 
 				<div class="row">
 					<form id="chatform">
-						<div class="col-sm-10 ">
+						<div class="col-xs-10 ">
 							<textarea rows="1" id="chatmessage" class="form-control"></textarea>
 						</div>
-						<div class="col-sm-2 ">
+						<div class="col-xs-2 ">
 							<button class="btn btn-block btn-success" id="chatsend" >Send</button>
 						</div>
 					</form>
 				</div>
 
-				
+				</div>
 			</div>
+
 			<!-- Bot Window -->
-			<div class="col-sm-4">
-				<div class="row">
+			<div class="col-xs-4 ">
+				<div class="botarea row ">
+					<h1 class="text-center">Hello World</h1>	
+				</div>
+				
+				<!-- <div class="row">
 					<div>
 						<center><img id="uchatlogo" src="/static/image/uchat_logo.png" /></center>
 					</div>
-				</div>
+				</div> -->
 				
 			</div>
 			
