divided css and html for better writing code

--- a/uchat_backend/static/css/chat/details_section.css
+++ b/uchat_backend/static/css/chat/details_section.css
@@ -1,6 +1,7 @@
 .sidebar{
 	/*background-color: rgb(141,182,0);*/
-	background-color: #607D8B;
+	/*background-color: #607D8B;*/
+	background-color: #303641;
 	height: 100vh;
 	color: #ECEFF1;
 }
