--- a/uchat_backend/templates/chat/index.html
+++ b/uchat_backend/templates/chat/index.html
@@ -5,7 +5,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/static/css/chat/main.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/chat/sidebar.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/chat/details_section.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/chat/chat_section.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/chat/bot_section.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/chat/searchbar.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/chat/message.css">
 </head>
@@ -14,275 +16,15 @@
 	<div class="container-fluid">
 		<div class="row main-page">
 			<!-- Side Window -->
-			<div class="col-xs-2 sidebar" >
-				<div class="sidebar-1">
-					<!-- User Info -->
-					<div class="row">
-						<div class="sidebar-section user-info">
-							<div class="sidebar-header">
-								<div class="col-lg-4">
-									<div class="sidebar-user-icon">
-										<img  class="initial-image img-rounded" data-name="Vidit" height="50" width="50"/>
-									</div>
-								</div>
-								<div class="col-sm-8">
-									<div class="row">
-										<div class="col-lg-12">
-											<div id="user-info-name" class="sidebar-item-title">{{loggeduser.name|title}}</div>	
-										</div>
-									</div>
-									<span id="user-info-username">{{loggeduser.username}}</span> | 
-									<span>active</span>
-								</div>	
-							</div>
-							<hr>
-						</div>	
-					</div>
-				
-					<div class="row">
-						<!-- Friends and Group search -->
-						<div class="col-sm-12">
-							<div class="friends-group-search sidebar-item input-group">
-								<input class="typeahead form-control" type="text" id="typeahead" placeholder=" Search uChat" >
-								<!-- <span class="input-group-btn">
-	                        		<button class="btn btn-info btn-sm" type="button" >
-	                            		<i class="glyphicon glyphicon-search"></i>
-	                        		</button>
-	                        	</span> -->
-							</div>
-						</div>
-
-					</div>
-
-
-				<!-- sIDEBAR fRIENDS -->
-
-				<div class="sidebar-section">
-					<div class="sidebar-header">
-						Friends 
-						<span class="glyphicon glyphicon-plus" aria-hidden="true" style="cursor:pointer" data-toggle="modal" data-target="#addFriendModal" id="sidebar-add-friend" ></span>
-					</div>
-
-					<div class="friends-list">
-						{% for friend in loggeduser.get_friends %}
-						<div class="sidebar-item friends-item">
-							<div class="sidebar-item-icon">
-								<img class="initial-image img-rounded" data-name="{{friend.friend.name}}" width="20px" height="20spx">
-							</div>
-							<div class="sidebar-item-title">{{friend.friend.name|title}}</div>
-							<div class="hidden socket-chat" creator="{{friend.creator.username}}" friend="{{friend.friend.username}}" friend-name="{{friend.friend.name}}" chat-id="{{friend.room.label}}">{{friend.label}}</div>
-						</div>
-						{% endfor %}
-						<!-- <div class="sidebar-item friends-item">
-							<div class="sidebar-item-icon">
-								<img class="initial-image img-rounded" data-name="Neelmay" width="18px" height="18px">
-							</div>
-							<div class="sidebar-item-title">Neelmay</div>
-						</div>
-
-						<div class="sidebar-item friends-item">
-							<div class="sidebar-item-icon">
-								<img class="initial-image img-rounded" data-name="Anirudh" width="18px" height="18px">
-							</div>
-							<div class="sidebar-item-title">Anirudh</div>
-						</div>
-						<div class="sidebar-item friends-item">
-							<div class="sidebar-item-icon">
-								<img class="initial-image img-rounded" data-name="Nihal" width="18px" height="18px">
-							</div>
-							<div class="sidebar-item-title">Nihal</div>
-						</div>
-						<div class="sidebar-item friends-item">
-							<div class="sidebar-item-icon">
-								<img class="initial-image img-rounded" data-name="Sheel" width="18px" height="18px">
-							</div>
-							<div class="sidebar-item-title">Sheel</div>
-						</div> -->
-
-					</div>	
-
-
-
-							<!-- Load More Friends here -->
-					<div class="sidebar-item">
-							<!-- <span class="glyphicon glyphicon-list"></span> -->
-						<label id="loadMoreFriends">Load More...</label>
-							<!-- <button type="button" class="btn" id="loadMoreFriends">Load More</button> -->
-					</div>						
-				</div>
-					
-				
-
-				<!-- Sidebar Groups -->
-
-				<div class="sidebar-section">
-						<div class="sidebar-header">
-							Groups 
-							<span class="glyphicon glyphicon-plus" aria-hidden="true" style="cursor:pointer" data-toggle="modal" data-target="#addGroupModal" id="sidebar-add-friend" ></span>
-						</div>
-
-						<div class="groups-list">
-							{% for group in groups %}
-							<div class="sidebar-item groups-item">
-								<div class="sidebar-item-icon">
-									<img class="initial-image img-rounded" data-name="{{group.group.name|title}}" width="20px" height="20spx">
-								</div>
-								<div class="sidebar-item-title">{{group.group.name|title}}</div>
-							</div>
-							{% endfor %}
-
-						</div>	
-
-						
-
-							<!-- Load More Groups here -->
-						<div class="sidebar-item">
-							<label id="loadMoreGroups">Load More...</label>
-						</div>						
-				</div>
-				</div>
-			</div>
-
+			{% include "chat/details_section.html" %}
 
 			<!-- Chat Window -->
-			<div class="col-xs-6">
-				<div class="middle-section">
-					<div class="row">
-						<div class="col-sm-12">
-							<h1 class="text-right " id="friend-name-heading">  </h1>		
-						</div>
-					</div>
-				
-				<div class="row">
-					<div class="container-fluid chatarea" id="chat">
-
-						{% for m in messages %}
-						<div class="msg">
-							<div class="bubble bubble-text has-author title-number">
-								
-								<div class="message-text {% if m.handle == loggeduser.username %}message-out{% endif %}">
-									<span class="emojitext selectable-text">
-										{{m.handle}} - {{m.message}}
-									</span>
-									
-								</div>
-							</div>
-						</div>
-						{% endfor %}
-					</div>
-				</div>
-
-				<div class="row">
-					<form id="chatform">
-						<div class="col-xs-10 ">
-							<textarea rows="1" id="chatmessage" class="form-control"></textarea>
-						</div>
-						<div class="col-xs-2 ">
-							<button class="btn btn-block btn-success" id="chatsend" >Send</button>
-						</div>
-					</form>
-				</div>
-
-				</div>
-			</div>
-
+			{% include "chat/chat_section.html" %}
+			
 			<!-- Bot Window -->
-			<div class="col-xs-4 ">
-				<div class="botarea row ">
-					<h1 class="text-center">Hello World</h1>	
-				</div>
-				
-				<!-- <div class="row">
-					<div>
-						<center><img id="uchatlogo" src="/static/image/uchat_logo.png" /></center>
-					</div>
-				</div> -->
-				
-			</div>
-			
+			{% include "chat/bot_section.html" %}
 		</div>
-	
 	</div>
-
-
-	<!-- Adding Friends Modal  -->
-	<div class="modal fade" id="addFriendModal" tabindex="-1" role="dialog" aria-labelledby="addFriendModalLabel">
-		<div class="modal-dialog" role="document">
-
-			<div class="modal-content">
-
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-labelled="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="addFriendModalLabel">Enter Name of your friend</h4>
-					
-				</div>
-				<div class="modal-body">
-					<form>
-						<div class="form-group">
-							<label class="control-label">Name:</label>
-							<input type="text" class="form-control" id="friend-name">
-						</div>
-					</form>
-					<div>
-						<label id="searchFriendResult">Sample</label>
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" id="modalFriendSearch" class="btn btn-primary" >Search Friend </button>
-					<button type="button" id="modalFriendsubmit" class="btn btn-primary" data-dismiss="modal">Add Friend</button>
-				</div>
-				
-			</div>
-			
-		</div>	
-
-	</div>
-
-
-
-
-	<!-- Adding Group -->
-	<!-- Currently Adding names but will create a drop down list to add friends -->
-
-	<div class="modal fade" id="addGroupModal" tabindex="-1" role="dialog" aria-labelledby="addGroupModalLabel">
-		<div class="modal-dialog" role="document">
-
-			<div class="modal-content">
-
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-labelled="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="addFriendModalLabel">Enter Name of your friend</h4>
-					
-				</div>
-				<div class="modal-body">
-					<form>
-						<div class="form-group">
-							<label class="control-label">Group Name:</label>
-							<input type="text" class="form-control" id="group-name">
-						</div>
-						<div class="form-group">
-							<label class="control-label">Members:</label>
-							<input type="text" class="form-control" id="groupMembers">
-						</div>
-					</form>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" id="modalGroupsubmit" class="btn btn-primary" data-dismiss="modal">Add Group</button>
-				</div>
-				
-			</div>
-			
-		</div>	
-
-	</div>
-
-
-
-
-
-
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
