--- a/uchat_backend/static/css/chat/main.css
+++ b/uchat_backend/static/css/chat/main.css
@@ -1,61 +1,51 @@
-body{
-	font-family:'Lato', sans-serif;
+html, body {
 	height: 100%;
-	min-height: 100%;
+    position: relative;
 }
 
-html{
-	min-height: 100%;
-	position: relative;
-}
-
-.chatarea{
-	margin: 5px;
-	border-top:solid 1px ;
-	/*border-radius: 8px;*/
+.page-container{
 	width: 100%;
-	height: 85vh;
-	/*overflow: auto;*/
-	overflow-y: scroll;
-
-}
-
-.botarea{
-	/*width: 100%;*/
-	height: 100vh;
-	background-color: white;
-	color: blue;
+    display: table;
+    height: 100%;
+    table-layout: fixed;
 }
 
 
-#uchatlogo{
-	margin-top: 5px;
-	/*margin-left: 10px;*/	
-	height:10vh; 
-	width: 50%; 
+.page-container .details-container{
+	position: relative;
+	display: table-cell;
+	vertical-align: top;
+	z-index: 5;
+	box-sizing: border-box;
+	width: 250px;
 }
 
-.middle-section{
-	height:100vh;
+.page-container .chat-container{
+	position: relative;
+    display: table-cell;
+    vertical-align: top;
+    z-index: 5;
+    /*background-color: red;*/
+    width: 55%;
 }
 
-@media screen and (max-width: 1276px) {
-	.middle-section {
-		widts:608px;
-	}
+.page-container .bot-container{
+	position: relative;
+    display: table-cell;
+    vertical-align: top;
+    z-index: 5;
+    background-color: #303641;
+    min-width: 250px;
 }
 
-@media screen and (max-width: 1276px) {
-	.botarea {
-		width:396px;
-	}
+@media screen and (max-width: 1024px) {
+  .page-container .chat-container {
+    	width: 512px;
+  }
 }
 
-@media screen and (max-width: 1276px) {
-	.main-page {
-		max-height: 100vh;
-		min-width: 1276px;
-		overflow-x: scroll;
-	}
+@media screen and (max-width: 1024px) {
+  .page-container .bot-container {
+    	width: 300px;
+  }
 }
-
