--- a/uchat_backend/templates/chat/details_section.html
+++ b/uchat_backend/templates/chat/details_section.html
@@ -1,107 +1,148 @@
-<div class="col-xs-2 sidebar" >
-				<div class="sidebar-1">
-					<!-- User Info -->
-					<div class="row">
-						<div class="sidebar-section user-info">
-							<div class="sidebar-header">
-								<div class="col-lg-4">
-									<div class="sidebar-user-icon">
-										<img  class="initial-image img-rounded" data-name="Vidit" height="50" width="50"/>
-									</div>
-								</div>
-								<div class="col-sm-8">
-									<div class="row">
-										<div class="col-lg-12">
-											<div id="user-info-name" class="sidebar-item-title">{{loggeduser.name|title}}</div>	
-										</div>
-									</div>
-									<span id="user-info-username">{{loggeduser.username}}</span> | 
-									<span>active</span>
-								</div>	
-							</div>
-							<hr>
-						</div>	
+<div class="fixed" id="chat">
+	<div class="chat-inner" style="overflow: hidden; outline: none;" tabindex="5000">
+		<h2 class="chat-header">
+			<a href="#" class="chat-close"><i class="entypo-cancel"></i></a>
+			<i class="entypo-users"></i>
+			{{loggeduser.name|title}}
+			<span class="badge badge-success">3</span>
+		</h2>
+
+		<div class="chat-group" id="group-1">
+			<strong>Friends</strong>
+
+			<a href="#" id="sample-user-123" data-conversation-history="#sample_history">
+				<span class="user-status is-online"></span>
+				<em>Harsh Kothari</em>
+				<span class="badge badge-info">1</span>
+			</a>
+
+			<a href="#" id="sample-user-123" data-conversation-history="#sample_history">
+				<span class="user-status is-online"></span>
+				<em>Vidit Desai</em>
+				<span class="badge badge-info">10</span>
+			</a>
+
+			<a href="#" id="sample-user-123" data-conversation-history="#sample_history">
+				<span class="user-status is-busy"></span>
+				<em>Anirudh Mathur</em>
+				<span class="badge badge-info">16</span>
+			</a>
+
+			<a href="#" id="sample-user-123" data-conversation-history="#sample_history">
+				<span class="user-status is-busy"></span>
+				<em>Pavan Nihal Renduchinatala</em>
+				<span class="badge badge-info">160</span>
+			</a>
+		</div>
+
+		<div class="chat-group" id="group-2">
+			<strong>Groups</strong>
+
+			<a href="#" id="sample-user-123" data-conversation-history="#sample_history">
+				<span class="user-status is-online"></span>
+				<em>Table Tennis</em>
+				<!-- <span class="badge badge-info">1</span> -->
+			</a>
+
+			<a href="#" id="sample-user-123" data-conversation-history="#sample_history">
+				<span class="user-status is-online"></span>
+				<em>Gaming crew</em>
+				<span class="badge badge-info">1655</span>
+			</a>
+		</div>
+	</div>
+</div>
+
+
+<!-- <div class="col-xs-2 sidebar " >
+	<div class="sidebar-1">
+		User Info
+		<div class="row">
+			<div class="sidebar-section user-info">
+				<div class="sidebar-header">
+					<div class="col-lg-4">
+						<div class="sidebar-user-icon">
+							<img  class="initial-image img-rounded" data-name="Vidit" height="50" width="50"/>
+						</div>
 					</div>
-				
-					<div class="row">
-						<!-- Friends and Group search -->
-						<div class="col-sm-12">
-							<div class="friends-group-search sidebar-item input-group">
-								<input class="typeahead form-control" type="text" id="typeahead" placeholder=" Search uChat" >
-								<!-- <span class="input-group-btn">
-	                        		<button class="btn btn-info btn-sm" type="button" >
-	                            		<i class="glyphicon glyphicon-search"></i>
-	                        		</button>
-	                        	</span> -->
+					<div class="col-sm-8">
+						<div class="row">
+							<div class="col-lg-12">
+								<div id="user-info-name" class="sidebar-item-title">{{loggeduser.name|title}}</div>	
 							</div>
 						</div>
-
-					</div>
-
-
-				<!-- sIDEBAR fRIENDS -->
-
-				<div class="sidebar-section">
-					<div class="sidebar-header">
-						Friends 
-						<span class="glyphicon glyphicon-plus" aria-hidden="true" style="cursor:pointer" data-toggle="modal" data-target="#addFriendModal" id="sidebar-add-friend" ></span>
-					</div>
-
-					<div class="friends-list">
-						{% for friend in loggeduser.get_friends %}
-						<div class="sidebar-item friends-item">
-							<div class="sidebar-item-icon">
-								<img class="initial-image img-rounded" data-name="{{friend.friend.name}}" width="20px" height="20spx">
-							</div>
-							<div class="sidebar-item-title">{{friend.friend.name|title}}         <span class="badge hidden" id="{{friend.friend.username}}" style="background-color:#21a9e1;">0</span></div>
-							<div class="hidden socket-chat" creator="{{friend.creator.username}}" friend="{{friend.friend.username}}" friend-name="{{friend.friend.name}}" user-name="{{friend.friend.username}}" chat-id="{{friend.room.label}}">{{friend.label}}</div>
-						</div>
-						{% endfor %}
-
+						<span id="user-info-username">{{loggeduser.username}}</span> | 
+						<span>active</span>
 					</div>	
-
-
-
-							<!-- Load More Friends here -->
-					<div class="sidebar-item">
-							<!-- <span class="glyphicon glyphicon-list"></span> -->
-						<label id="loadMoreFriends">Load More...</label>
-							<!-- <button type="button" class="btn" id="loadMoreFriends">Load More</button> -->
-					</div>						
 				</div>
-					
-				
+				<hr>
+			</div>	
+		</div>
 
-				<!-- Sidebar Groups -->
+		<div class="row">
+			Friends and Group search
+			<div class="col-sm-12">
+				<div class="friends-group-search sidebar-item input-group">
+					<input class="typeahead form-control" type="text" id="typeahead" placeholder=" Search uChat" >
 
-				<div class="sidebar-section">
-						<div class="sidebar-header">
-							Groups 
-							<span class="glyphicon glyphicon-plus" aria-hidden="true" style="cursor:pointer" data-toggle="modal" data-target="#addGroupModal" id="sidebar-add-friend" ></span>
-						</div>
+	                        </div>
+	                    </div>
 
-						<div class="groups-list">
-							{% for group in groups %}
-							<div class="sidebar-item groups-item">
-								<div class="sidebar-item-icon">
-									<img class="initial-image img-rounded" data-name="{{group.group.name|title}}" width="20px" height="20spx">
-								</div>
-								<div class="sidebar-item-title">{{group.group.name|title}}</div>
-								<div class="hidden socket-chat" creator="{{group.creator.username}}" group="{{group.group.username}}" group-name="{{group.group.name}}" user-name="{{group.group.username}}" chat-id="{{group.room.label}}">{{friend.label}}</div>
-							</div>
-							{% endfor %}
+	                </div>
 
-						</div>	
 
-						
+	                sIDEBAR fRIENDS
 
-							<!-- Load More Groups here -->
-						<div class="sidebar-item">
-							<label id="loadMoreGroups">Load More...</label>
-						</div>						
-				</div>
-				</div>
-			</div>
-{% include "chat/details_section_searchbar.html" %}
-{% include "chat/details_section_friend.html" %}
-{% include "chat/details_section_group.html" %}
+	                <div class="sidebar-section">
+	                	<div class="sidebar-header">
+	                		Friends 
+	                		<span class="glyphicon glyphicon-plus" aria-hidden="true" style="cursor:pointer" data-toggle="modal" data-target="#addFriendModal" id="sidebar-add-friend" ></span>
+	                	</div>
+
+	                	{% include "chat/details_section_friend.html" %}
+
+
+
+	                	 Load More Friends here 
+	                	<div class="sidebar-item">
+	                		
+	                		<label id="loadMoreFriends">Load More...</label>
+	                	
+	                	</div>						
+	                </div>
+
+
+
+	                Sidebar Groups
+
+	                <div class="sidebar-section">
+	                	<div class="sidebar-header">
+	                		Groups 
+	                		<span class="glyphicon glyphicon-plus" aria-hidden="true" style="cursor:pointer" data-toggle="modal" data-target="#addGroupModal" id="sidebar-add-friend" ></span>
+	                	</div>
+
+	                	<div class="groups-list">
+	                		{% for group in groups %}
+	                		<div class="sidebar-item groups-item">
+	                			<div class="sidebar-item-icon">
+	                				<img class="initial-image img-rounded" data-name="{{group.group.name|title}}" width="20px" height="20spx">
+	                			</div>
+	                			<div class="sidebar-item-title">{{group.group.name|title}}</div>
+	                			<div class="hidden socket-chat" creator="{{group.creator.username}}" group="{{group.group.username}}" group-name="{{group.group.name}}" user-name="{{group.group.username}}" chat-id="{{group.room.label}}">{{friend.label}}</div>
+	                		</div>
+	                		{% endfor %}
+
+	                	</div>	
+
+
+
+	                	Load More Groups here
+	                	<div class="sidebar-item">
+	                		<label id="loadMoreGroups">Load More...</label>
+	                	</div>						
+	                </div>
+	            </div>
+	        </div>
+	        {% include "chat/details_section_searchbar.html" %}
+	        
+	        {% include "chat/details_section_group.html" %} -->
