--- a/uchat_backend/templates/chat/index.html
+++ b/uchat_backend/templates/chat/index.html
@@ -34,11 +34,11 @@
 	<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
 	<script type="text/javascript" src="/static/js/chat/initial.js"></script>
 	<script type="text/javascript" src="/static/js/chat/typeahead.js"></script>
-	<!-- <script type="text/javascript" src="/static/js/chat/main.js"></script> -->
+	<script type="text/javascript" src="/static/js/chat/main.js"></script>
 	<script type="text/javascript" src="/static/js/chat/friendModal.js"></script>
 	<script type="text/javascript" src="/static/js/chat/loadmoreFriends.js"></script>
 	<script type="text/javascript" src="/static/reconnecting-websocket.min.js"></script>
-	<!-- <script type="text/javascript" src="/static/js/chat/chat.js"></script> -->
+	<script type="text/javascript" src="/static/js/chat/chat.js"></script>
 
 
 </body>
