--- a/uchat_backend/templates/chat/details_section.html
+++ b/uchat_backend/templates/chat/details_section.html
@@ -7,10 +7,10 @@
 			<span class="badge badge-success">3</span>
 		</h2>
 
-		<div class="chat-group" id="group-1">
+		<div class="chat-group friends-list" id="group-1">
 			<strong>Friends</strong>
-
-			<a href="#" id="sample-user-123" data-conversation-history="#sample_history">
+			{% include "chat/details_section_friend.html" %}
+			<!-- <a href="#" id="sample-user-123" data-conversation-history="#sample_history">
 				<span class="user-status is-online"></span>
 				<em>Harsh Kothari</em>
 				<span class="badge badge-info">1</span>
@@ -32,7 +32,7 @@
 				<span class="user-status is-busy"></span>
 				<em>Pavan Nihal Renduchinatala</em>
 				<span class="badge badge-info">160</span>
-			</a>
+			</a> -->
 		</div>
 
 		<div class="chat-group" id="group-2">
