--- a/uchat_backend/templates/chat/details_section_friend.html
+++ b/uchat_backend/templates/chat/details_section_friend.html
@@ -1,11 +1,9 @@
-<div class="friends-list">
-	{% for friend in loggeduser.get_friends %}
-	<div class="sidebar-item friends-item">
-		<div class="sidebar-item-icon">
-			<img class="initial-image img-rounded" data-name="{{friend.friend.name}}" width="20px" height="20spx">
-		</div>
-		<div class="sidebar-item-title">{{friend.friend.name|title}}         <span class="badge hidden" id="{{friend.friend.username}}" style="background-color:#21a9e1;">0</span></div>
+{% for friend in loggeduser.get_friends %}
+	<a href="#" class="friend-detail" id="sample-user-123" data-conversation-history="#sample_history">
+		<span class="user-status is-online"></span>
+		<em>{{friend.friend.name|title}}</em>
+
+		<span class="badge badge-info">1</span>
 		<div class="hidden socket-chat" creator="{{friend.creator.username}}" friend="{{friend.friend.username}}" friend-name="{{friend.friend.name}}" user-name="{{friend.friend.username}}" chat-id="{{friend.room.label}}">{{friend.label}}</div>
-	</div>
-	{% endfor %}
-</div>	
+	</a>
+{% endfor %}
